--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AR | Marvel VS DC Comics</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -20,20 +23,23 @@
         <br><br>
     <div>
         <main>
+            
             <h1 class="hidden">Ameem Rahman</h1>
+            <section>
             <h2 class="myComics"><u>DC Comics &amp; Marvel</u></h2>
             <p class="comicsText">
                 DC Comics and Marvel have dominated the comic-book industry for over 6 decades. 
-                Which of the two fiction universes do you prefer? Check out our top 25 super 
-                heroes and villains lists. Together they account for over 80% of the American 
-                comic-book market. DC Comics and Marvel Comics have been the leading comic-book 
-                companies for over 6 decades. Both have created unique characters, and universes 
-                that have expanded beyond comic-books into the cinema, TV, video games and toy industries. 
-                Thanks to excellent comic-writers and Hollywood super heroes are nowadays undergoing a 
-                new golden age. Their impact on popular culture shouldn't be understated.
+                Which of the two fiction universes do you prefer? Together they account for over 80% 
+                of the American comic-book market. DC Comics and Marvel Comics have been the leading 
+                comic-book companies for over 6 decades. Both have created unique characters, and 
+                universes that have expanded beyond comic-books into the cinema, TV, video games and 
+                toy industries. Thanks to excellent comic-writers and Hollywood super heroes are nowadays 
+                undergoing a new golden age. Their impact on popular culture shouldn't be understated.
             </p>
+            </section>
             <br><br>
             <div id="dc">
+            <section>
             <img class="dcmImage" src="/img/DC-Marvel.jpeg" alt="">
             <br><br>
             <h2 class="myText">
@@ -51,8 +57,10 @@
                 fought in a series of duels, with interesting outcomes such as Superman defeating the 
                 Hulk while Spider-Man defeated Superboy.
             </p>
+        </section>
             </div>
             <div class="marvel">
+                <section>
                 <h2 class="meText">
                     <u>Marvel VS DC Comics</u>
                 </h2>
@@ -69,6 +77,12 @@
                 main characters of each universe fought in a series of duels, with interesting 
                 outcomes such as Superman defeating the Hulk while Spider-Man defeated Superboy.
             </p>
+        </section>
+            <div>
+                <footer class="footer">
+                    <h4 class="arText">Ameem Rahman</h4>
+                </footer>
+            </div>
         </main>
     </div>
         <script src="/js/main.js"></script>
